--- a/src/Assets/scss/index.scss
+++ b/src/Assets/scss/index.scss
@@ -1,107 +1,93 @@
 //custom font-size.
 html {
+
     font-size: 10px;
+
+}
+
+@font-face {
+
+    font-family: Haffer SQ TRIAL;
+    src: url('/Assets/fonts/HafferTRIALVF.ttf') format('truetype');
 
 }
 
 //default font-size,margin,padding
 body {
-    
+
     display: flex;
     margin: 0;
-    padding:0rem;
-    font-family:Arial, Helvetica, sans-serif;
+    padding: 0rem;
+    font-family: Haffer SQ TRIAL;
 }
 
 //main content
 .main {
 
     display: flex;
-    width: auto;
-    height: auto;
     flex-direction: row;
-    padding-top: 4rem;
-    padding-bottom: 4rem;
-    padding-left: 8rem;
-    padding-right: 8rem;
     align-items: flex-start;
-    background-color: rgb(206, 212, 212);
+    background-color: rgb(229, 238, 238);
 
-//main content-chid-container
+    //main content-chid-container
     .weather-info {
 
         display: flex;
-        padding:0rem;
         flex-direction: row;
-        height: auto;
-        width: auto;
-        gap: 0rem;
-        border-radius:3rem;
 
-//search weather, api data render, date-time,splush api image render,
+        //search weather, api data render, date-time,splush api image render,
         .weather-info-left-container {
 
-            width:auto;
-            padding: 2rem;
-            padding-left:2rem;
-            height: auto;
             display: flex;
+            width: 40%;
+            padding: 4.5rem 2rem 0rem 2rem;
             flex-direction: column;
             background-color: rgb(255, 255, 255);
-            padding-bottom:0rem;
-            padding-top:4.5rem;
-            border-top-left-radius:3rem;
-            border-bottom-left-radius:3rem;
-            flex-wrap:wrap;
-
-
             
+
+
             .search-weather {
 
                 display: flex;
                 flex-direction: row;
                 align-items: center;
                 justify-content: center;
-                gap:2rem;
-                height: auto;
-                width:auto;
-                flex-wrap: wrap;
-                padding-left: 0rem; 
+                gap: 2rem;
+
 
 
                 input {
 
                     display: flex;
                     border: none;
-                    outline:0;
+                    outline: 0;
                     padding: 0.5rem 0rem;
-                    font-size: 1.2rem;
-                    width:11rem;
+                    font-size: 1.5rem;
+                    text-align: center;
 
                 }
 
                 svg {
 
                     display: flex;
-                    width:1rem;
+                    width: 1rem;
                     cursor: pointer;
-                    padding-left:1rem;
-                        
+                    padding-left: 1rem;
+
                 }
 
                 .cross-hair-icon {
 
                     display: flex;
                     gap: 0rem;
-                    padding-left:2rem;
-                    
-                   
+                    padding-left: 2rem;
+
+
 
                     svg {
+
                         display: flex;
-                        padding: 0.8rem;
-                        padding-top:0.4rem;
-                        padding-bottom:0.4rem;
+                        padding: 0.4rem 0.8rem 0.4rem 0.8rem;
                         background-color: rgb(242, 240, 236);
                         border-radius: 50%;
 
@@ -109,9 +95,9 @@ body {
                 }
 
                 .error-message {
-                   
+
                     display: flex;
-                    
+
 
                     p {
 
@@ -119,7 +105,6 @@ body {
                         color: rgb(252, 18, 18);
                         font-size: 1.2rem;
                         margin: 0;
-                        padding-left:0rem;
 
                     }
                 }
@@ -128,35 +113,30 @@ body {
 
             .weather-data {
 
-                height: auto;
-                width: auto;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                gap:3rem;
-                padding:1rem;
-                
+                gap: 5.5rem;
+                padding: 1rem;
+
 
                 .weather-image {
 
                     padding: 1rem;
-                    padding-left:1;
                     background-color: rgb(255, 255, 255);
                     display: flex;
                     flex-direction: column;
-                    width: auto;
                     align-items: flex-start;
-                    gap:2.5rem;
-
+                    gap: 2.5rem;
 
 
                     img {
 
                         display: flex;
-                        width: 100%; 
-                        height:20rem; 
+                        width: 100%;
+                        height: 20rem;
                         background-color: rgb(255, 255, 255);
-                        
+
 
                     }
 
@@ -165,9 +145,10 @@ body {
                         margin: 0;
                         padding: 0;
                         display: flex;
-                        font-size:6rem;
-                        font-weight:300;
-                        
+                        font-size: 6rem;
+                        font-weight: 300;
+                        justify-content:centers;
+
 
                     }
 
@@ -175,12 +156,13 @@ body {
 
                         display: flex;
                         height: 2rem;
-                        width:100%;
+                        width: 100%;
                         gap: 0.5rem;
                         padding-bottom: 2rem;
                         border-bottom: 0.1rem solid rgb(224, 220, 220);
 
                         .current-day {
+
                             display: flex;
                             font-size: 1.6rem;
                             font-weight: light;
@@ -188,6 +170,7 @@ body {
                         }
 
                         .current-time {
+
                             display: flex;
                             font-size: 1.6rem;
                             font-weight: light;
@@ -200,8 +183,6 @@ body {
 
                         display: flex;
                         flex-direction: column;
-                        height: auto;
-                        width:auto;
                         gap: 1rem;
 
                         img {
@@ -210,6 +191,7 @@ body {
                         }
 
                         span {
+
                             display: flex;
                             font-size: 1.2rem;
                             padding: 0;
@@ -218,21 +200,21 @@ body {
                         }
 
                         .cloudy {
-                            align-items: center;
-                            height: auto;
+
+
                             display: flex;
+                            align-items: center;
                             flex-direction: row;
-                            width:auto;
-                            gap: 1rem
+                            gap: 1rem;
+
                         }
 
                         .rain {
-                            align-items: center;
-                            height: auto;
+
                             display: flex;
+                            align-items: center;
                             flex-direction: row;
-                            width:auto;
-                            gap: 1rem
+                            gap: 1rem;
                         }
                     }
 
@@ -243,12 +225,10 @@ body {
                     display: flex;
                     flex-direction: row;
                     position: relative;
-                    height: auto;
-                    width: auto;
-                    padding:1rem;
-                    padding-top:0;
-                    
-                    
+                    padding: 1rem;
+                    padding-top: 0;
+
+
                     img {
 
                         display: flex;
@@ -257,14 +237,15 @@ body {
                         margin: 0;
                         padding: 0;
                         border-radius: 2rem;
+                        object-fit: cover;
 
                     }
 
                     h3 {
                         color: rgb(255, 255, 255);
                         position: absolute;
-                        top:35%;
-                        right:0%;
+                        top: 35%;
+                        right: 0%;
                         width: 100%;
                         text-align: center;
                         font-size: 18px;
@@ -278,64 +259,54 @@ body {
         }
 
 
-   //header, weekly past data display(UI only), current weather display as todays highlight weather api.
+        //header, weekly past data display(UI only), current weather display as todays highlight weather api.
         .weather-info-right-container {
 
             display: flex;
             padding: 2rem;
-            padding-right:2rem;
-            padding-left:6rem;
-            width: auto;
+            padding-right: 2rem;
+            padding-left: 11rem;
             flex-direction: column;
             justify-content: flex-start;
-            height:auto;
-            gap:2rem;
-            border-top-right-radius:3rem;
-            border-bottom-right-radius:3rem;
-            background-color:rgb(239, 245, 245);
+            gap: 2rem;
+            background-color: rgb(239, 245, 245);
 
             .past-data {
-                
+
                 display: flex;
                 flex-direction: column;
-                height: auto;
-                width: auto;
-                padding:1rem;
-                gap:3rem;
-                
-               
+                padding: 1rem;
+                gap: 3rem;
+
 
                 .weather-header {
-                    
+
                     display: flex;
                     flex-direction: row;
                     padding: 1rem;
-                    padding-left:0;
-                    height: auto;
-                    width:auto;
-                    flex-wrap:wrap;
-                    justify-content:space-between;
+                    padding-left: 0;
+                    justify-content: space-between;
 
                     .weather-title {
-                       
+
                         display: flex;
                         padding: 1rem;
-                        padding-left:1rem;
+                        padding-left: 1rem;
                         gap: 1rem;
                         font-size: 1.4rem;
-                        width:15rem;
-                        flex-wrap:wrap;
-                        
+                        width: 15rem;
+
                         .today {
                             display: flex;
                             align-items: center;
                             color: grey;
                             cursor: pointer;
+                            font-size: 1.5rem;
                         }
 
                         .week {
 
-                            height: auto;
+
                             padding-top: 0.2rem;
                             margin: 0;
                             display: flex;
@@ -347,6 +318,7 @@ body {
                             border-bottom: 0.1rem solid rgb(1, 1, 16);
                             padding-bottom: 0rem;
                             cursor: pointer;
+                            font-size: 1.5rem;
                         }
 
                     }
@@ -354,22 +326,17 @@ body {
                     .weather-units {
 
                         display: flex;
-                        height: auto;
                         flex-direction: row;
-                        width:auto;
-                        gap: 3rem;
-                        flex-wrap:wrap;
-                        padding-right:3.5rem;
+                        gap: 3.1rem;
 
                         .units {
+
                             display: flex;
                             flex-direction: row;
                             gap: 1rem;
-                            height: auto;
-                            width: auto;
                             justify-content: center;
                             align-items: center;
-                            flex-wrap:wrap;
+
 
                             .celcius-logo {
                                 display: flex;
@@ -408,14 +375,14 @@ body {
 
                         .profile-pic {
                             display: flex;
-                            height: auto;
                             width: 4rem;
                             border-radius: 25%;
 
                             img {
+
                                 display: flex;
-                                height: 3.5rem;
-                                width: 3.5rem;
+                                height: 4rem;
+                                width: 4rem;
                                 border-radius: 25%;
                             }
                         }
@@ -427,20 +394,17 @@ body {
 
                 .weather-history {
                     display: flex;
-                    flex-direction:row;
-                    padding:1rem;
-                    height: auto;
-                    width:auto;
-                    gap:1.5rem;
-                    flex-wrap: wrap;
-                    justify-content:flex-start;
+                    flex-direction: row;
+                    padding: 1rem;
+                    gap: 3.3rem;
+                    justify-content: flex-start;
 
                     .week-day {
 
                         display: flex;
                         padding: 1rem;
-                        padding-left:2.5rem;
-                        padding-right:2.5rem;
+                        padding-left: 2.5rem;
+                        padding-right: 2.5rem;
                         align-items: center;
                         flex-direction: column;
                         height: 7.5rem;
@@ -448,7 +412,7 @@ body {
                         flex-direction: column;
                         border-radius: 1rem;
                         justify-content: space-between;
-                        background-color:white;
+                        background-color: white;
 
 
                         span {
@@ -471,8 +435,8 @@ body {
                 }
 
                 h2 {
-                    
-                    padding-left:1rem;
+
+                    padding-left: 1rem;
                     margin: 0;
                     color: rgb(2, 2, 17);
                     font-weight: 600;
@@ -484,38 +448,35 @@ body {
 
             .weather-highlights {
 
-                height: auto;
-                width: auto;
                 display: flex;
-                flex-direction:row;
+                flex-direction: row;
                 margin-top: 0rem;
                 font-size: 2rem;
                 margin: 0;
                 padding: 1rem;
-                padding-left:2rem;
-                padding-top:rem;
-                gap:1.5rem;
-                justify-content:flex-start;
+                padding-left: 2rem;
+                padding-top: rem;
+                gap: 5rem;
+                justify-content: flex-start;
                 flex-wrap: wrap;
-               
+
 
                 .weather-content {
 
                     display: flex;
                     flex-direction: column;
-                    height:auto;
                     width: 11rem;
                     justify-content: flex-start;
                     align-items: flex-start;
                     background-color: rgb(255, 255, 255);
                     border-radius: 2rem;
                     align-items: flex-start;
-                    padding:2.1rem;
-                    padding-top:1.5rem;
-                    padding-bottom:1.5rem;
+                    padding: 2.1rem;
+                    padding-top: 1.5rem;
+                    padding-bottom: 1.5rem;
                     align-items: flex-start;
-                    gap:2rem;
-                  
+                    gap: 2rem;
+
 
                     img {
                         height: 3rem;
@@ -527,13 +488,13 @@ body {
                 p {
 
                     display: flex;
-                    font-size:3rem;
+                    font-size: 3rem;
                     display: flex;
                     margin: 0;
 
                     span {
                         display: flex;
-                        font-size:2rem;
+                        font-size: 2rem;
                         justify-content: center;
                         align-items: center;
                         padding: 0.5rem;
@@ -546,6 +507,7 @@ body {
 
 
                 .weather-prop-title {
+
                     display: flex;
                     font-size: 1.6rem;
                     font-weight: 400;
